// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currency balance component renders currency balance 1`] = `
.glamor-1 {
  font-size: 12px;
  color: rgba(247, 0, 135, 1);
  font-family: Arial;
}

.glamor-1 span {
  font-size: 10px;
}

<p
  className="glamor-0 glamor-1"
>
  Balance: 
  <span>
    $
  </span>
  4567
</p>
`;

exports[`Currency balance component renders currency balance when not enough money available 1`] = `
.glamor-1 {
  font-size: 12px;
  color: #b1b1b1;
  font-family: Arial;
}

.glamor-1 span {
  font-size: 10px;
}

<p
  className="glamor-0 glamor-1"
>
  Balance: 
  <span>
    $
  </span>
  4567
</p>
`;
